--- a/public/profile.html
+++ b/public/profile.html
@@ -71,29 +71,35 @@
 
             <form>
                 <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                    <label for="itemName" class="col-sm-2 col-form-label">Item Name</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        <input type="itemName" class="form-control" id="itemName" placeholder="Item Name">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+                    <label for="category" class="col-sm-2 col-form-label">Category</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="category" class="form-control" id="itemCategory" placeholder="Category">
                     </div>
                 </div>
+                <form>
+                    <div class="form-group">
+                        <label for="exampleFormControlFile1">Item Image</label>
+                        <input type="file" class="form-control-file" id="itemPhoto">
+                    </div>
+                </form>
                 <fieldset class="form-group">
                     <div class="row">
-                        <legend class="col-form-label col-sm-2 pt-0">Radios</legend>
+                        <legend class="col-form-label col-sm-2 pt-0">Item Type</legend>
                         <div class="col-sm-10">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                                <input class="form-check-input" type="radio" name="gridRadios" id="havewant1" value="option1" checked>
                                 <label class="form-check-label" for="gridRadios1">
                               Have
                             </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                                <input class="form-check-input" type="radio" name="gridRadios" id="havewant2" value="option2">
                                 <label class="form-check-label" for="gridRadios2">
                               Want
                             </label>
@@ -101,20 +107,13 @@
                         </div>
                     </div>
                 </fieldset>
-                <div class="form-group row">
-                    <div class="col-sm-2">Checkbox</div>
-                    <div class="col-sm-10">
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="gridCheck1">
-                            <label class="form-check-label" for="gridCheck1">
-                            Example checkbox
-                          </label>
-                        </div>
-                    </div>
+                <div class="form-group">
+                    <label for="itemDescription">Item Description</label>
+                    <textarea class="form-control" id="itemDescription" rows="3"></textarea>
                 </div>
                 <div class="form-group row">
                     <div class="col-sm-10">
-                        <button type="submit" class="btn btn-primary">Sign in</button>
+                        <button id="newItem" type="submit" class="btn btn-primary">Submit</button>
                     </div>
                 </div>
             </form>
