--- a/public/index.html
+++ b/public/index.html
@@ -9,17 +9,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link type="stylesheet" href="styles/style.sass">
-    <title>Project Two</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Barter Your Shit</title>
 </head>
 
 <body>
 
-    <header>
+    <header class="persistent">
         <nav>
-
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-end">
+            <nav class="navbar navbar-expand-lg navbar-light justify-content-end">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
@@ -27,17 +25,21 @@
                 <nav>
                     <div class="navbar">
                         <ul class="navbar-nav mr-auto">
-                            <li class="nav-item active">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="/">Home   </a>
-                                </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/">Home</a>
+                            </li>
+
+                            <li>
                                 <a class="nav-link" href="/signup"> Sign Up </a>
                             </li>
+
                             <li class="nav-item">
-                                <a class="nav-link" href="/login"> Login   </a>
+                                <a class="nav-link" href="/login"> Login</a>
                             </li>
+
                             <li class="nav-item">
-                                <a class="nav-link" href="/logout"> Logout</a>
+                                <a class="nav-link" href="/logout">Barter</a>
+                            </li>
 
                 </nav>
     </header>
@@ -61,10 +63,10 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/dummy-image.jpg" class="d-block w-100" alt="...">
+                        <img src="images/toys.PNG" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Popular Stuff</h5>
-                            <p>Here's the stuff that most people are adding to their wishlists! .</p>
+                            <p>Tis' the season for toys! .</p>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -125,7 +127,7 @@
                                       <span class="navbar-toggler-icon"></span>
                                     </button>
             <nav>
-                <div class="navbar">
+                <div class="navbar center">
                     <ul class="navbar-nav mr-auto justify-content-center">
                         <li class="nav-item active">
                             <li class="nav-item">
