added more sass editing

--- a/public/barter.html
+++ b/public/barter.html
@@ -81,7 +81,7 @@
         <br>
         <div class="card-group">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/camera-coffee-cup-705164.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Item</h5>
                     <p class="card-text">A little bit about the item.</p>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/toys.PNG" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Item</h5>
                     <p class="card-text">A little bit about the item.</p>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/accessories-adorable-baby-325867.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Item</h5>
                     <p class="card-text">A little bit about the item.</p>
