--- a/public/index.html
+++ b/public/index.html
@@ -76,19 +76,19 @@
                             <p>Don't forget to sign up and join our bartering community!</p>
                         </div>
                     </div>
+
                 </div>
-
-
-
 
             </div>
         </div>
+
+
         <br>
         <br>
         <br>
         <div class="card-group">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/Capture.PNG" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Featured Item</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -96,7 +96,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/black-connection-device-6320.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Featured Item</h5>
                     <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="images/blur-character-close-up-164854.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Featured Item</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
